Fixed images on mobile

--- a/src/components/body/education/educationCard/educationCard.css
+++ b/src/components/body/education/educationCard/educationCard.css
@@ -8,34 +8,33 @@
 	align-items: flex-start;
 }
 
-#schoolLogo {
+.schoolLogo {
 	display: flex;
 	height: 80px;
 	width: 80px;
 	align-items: center;
+	justify-content: center;
 	border-radius: 8px;
+	overflow: hidden;
+	background-color: white;
 }
 
-.educationCard img {
-	width: 80px;
+.schoolLogo img {
+	max-height: 100%;
+	max-width: 100%;
 }
 
-#educationHeader {
+.educationHeader {
 	display: flex;
 	align-items: center;
 	flex-direction: row;
 	gap: 8px;
 }
 
-#educationInfo {
+.educationInfo {
 	display: flex;
 	align-items: flex-start;
 	flex-direction: column;
-}
-
-.educationDates {
-	color: var(--text);
-	font-size: 16px;
 }
 
 @media only screen and (max-width: 768px) {
